# interview_prep

./: CMakeLists.txt  quick_learn.md
Kcloude/: Docker.md  k8s.md
dsa/linear_ds/: circular_queue.c  dynamic_circular_queue.c
dsa/list/: circular_list.c  singlelist.c
network/: ccna.md
os/: child.c  fork_wait_exec.c  process_state.md
